# final_project_version

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/MPU6886-idf/: mpu6886.c
components/MPU6886-idf1/: CMakeLists.txt
components/button/: CMakeLists.txt
components/communication_interface/: CMakeLists.txt  communication_interface.c
components/communication_interface/include/: communication_interface.h
components/espressif__button/: .component_hash  idf_component.yml
components/gpio_manager/: CMakeLists.txt  Kconfig.projbuild  gpio_button.c  gpio_led.c  gpio_manager.c
components/gpio_manager/include/: gpio_button.h  gpio_led.h  gpio_manager.h
components/i2c_manager/: CMakeLists.txt
components/i2c_manager/i2c_manager/: i2c_manager.c
components/i2c_manager1/: Kconfig
components/i2c_manager1/i2c_manager/: i2c_manager.h
components/project_fsm/: CMakeLists.txt  project_fsm.c
components/project_fsm/include/: project_fsm.h
components/sacdm_manager/: CMakeLists.txt  Kconfig.projbuild  sacdm_acc_provider.c  sacdm_manager.c
components/sacdm_manager/include/: sacdm_acc_provider.h  sacdm_manager.h
components/supabase_client/: CMakeLists.txt  Kconfig.projbuild  supabase_client.c
components/supabase_client/include/: supabase_client.h
components/wifi/: CMakeLists.txt  Kconfig.projbuild  connect.c  connect_sta.c  connect_sta.h
main/: CMakeLists.txt  idf_component.yml  main.c  nmain.c
